--- a/packages/cw721-upgradable/Cargo.toml
+++ b/packages/cw721-upgradable/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "cw721-upgradeable"
+name = "cw721-upgradable"
 version = "0.13.4"
 authors = [
     "Ethan Frey <ethanfrey@users.noreply.github.com>",
     "Orkun Külçe <orkun@deuslabs.fi>",
+    "Drew Taylor <drew.taylor@philabs.xyz>",
 ]
 edition = "2018"
 description = "Definition and types for the CosmWasm-721 NFT interface"
