Renames 'cw721-upgradable' to 'cw721-updatable', 'UpgradeMsg' to 'UpdateMetadataMsg', 'Upgrade' to 'UpdateMetadata', and 'upgrade' to 'update_metadata'

--- a/packages/cw721-updatable/Cargo.toml
+++ b/packages/cw721-updatable/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cw721-upgradable"
+name = "cw721-updatable"
 version = "0.13.4"
 authors = [
     "Ethan Frey <ethanfrey@users.noreply.github.com>",
