--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ library = []
 [dependencies]
 cw-utils = "0.13.4"
 cw2 = "0.13.4"
-cw721-upgradable = { path = "./packages/cw721-upgradable", version = "0.13.4" }
+cw721-updatable = { path = "./packages/cw721-updatable", version = "0.13.4" }
 cw-storage-plus = "0.13.4"
 cosmwasm-std = { version = "1.0.0" }
 schemars = "0.8.10"
